--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -5,7 +5,15 @@
     <script src="Qunit/qunit.js" type="text/javascript"></script>
     <script src="../Lib/knockout-latest.debug.js" type="text/javascript"></script>
     <script src="../Src/knockout.validation.js" type="text/javascript"></script>
-
+    <script type="text/javascript">
+        ko.validation.init({
+            registerExtenders: true,
+            messagesOnModified: true,
+            insertMessages: true,
+            parseInputAttributes: true,
+            messageTemplate: null
+        });
+    </script>
     <!--test Scripts here-->
     <script src="validation-tests.js" type="text/javascript"></script>
 
@@ -13,8 +21,7 @@
     <style type="text/css">
         label { display: block; }
         .validationMessage { color: Red; }
-        .customMessage { color: Orange; }
-        
+        .customMessage { color: Orange; }        
     </style>
 </head>
 <body>
@@ -27,16 +34,6 @@
 
     <script type="text/javascript">
         ko.validation.rules.pattern.message = 'Invalid.';
-        
-        /*
-        ko.validation.init({
-            registerExtenders: true,
-            messagesOnModified: true,
-            insertMessages: true,
-            parseInputAttributes: true,
-            messageTemplate: null
-        });
-        */
 
         var captcha = function (val) {
             return val == 11;
@@ -57,7 +54,7 @@
             subscriptionOptions: ['Technology', 'Music'],
             subscription: ko.observable().extend({ required: true }),
             password: ko.observable(),
-            captcha: ko.observable().extend({  // custom validator
+            captcha: ko.observable().extend({  // custom Anonymous validator
                 validation: { validator: captcha, message: 'Please check.' }
             }),
             submit: function () {
@@ -78,9 +75,7 @@
 
         viewModel.requireLocation = function () {
             viewModel.location.extend({ required: true });
-        };
-
-        ko.applyBindings(viewModel);
+        };        
     </script>
     <script id="customMessageTemplate" type="text/html">
         <em class="customMessage" data-bind='validationMessage: field'></em>
@@ -106,5 +101,10 @@
     <br />
     <br />
     <button type="button" data-bind='click: requireLocation'>Make 'Location' required</button>
+    <script type="text/javascript">
+        window.onload = function () {
+            ko.applyBindings(viewModel);
+        };
+    </script>
 </body>
 </html>
