--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -87,7 +87,7 @@
         <div data-bind='validationOptions: { messageTemplate: "customMessageTemplate" }'>
             <label>Email: <input data-bind='value: emailAddress' required pattern="@"/></label>
             <label>Location: <input data-bind='value: location'/></label>
-            <label>Age: <input data-bind='value: age' required/></label>
+            <label>Age: <input id="testAgeInput" data-bind='value: age' required/></label>
         </div>
         <label>
             Subscriptions: 
