added more validation rules

--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -4,7 +4,7 @@
     <link href="Qunit/qunit.css" rel="stylesheet" type="text/css" />
     <script src="Qunit/qunit.js" type="text/javascript"></script>
     <script src="../Lib/knockout-latest.debug.js" type="text/javascript"></script>
-    <script src="../Src/knockout.validation.min.js" type="text/javascript"></script>
+    <script src="../Src/knockout.validation.js" type="text/javascript"></script>
     <script type="text/javascript">
         ko.validation.init({
             registerExtenders: true,
