--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -3,6 +3,7 @@
 <head>
     <link href="Qunit/qunit.css" rel="stylesheet" type="text/css" />
     <script src="Qunit/qunit.js" type="text/javascript"></script>
+    <script src="jquery-1.7.1.js" type="text/javascript"></script>
     <script src="../Lib/knockout-latest.debug.js" type="text/javascript"></script>
     <script src="../Src/knockout.validation.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -16,6 +17,7 @@
     </script>
     <!--test Scripts here-->
     <script src="validation-tests.js" type="text/javascript"></script>
+    <script src="validation-ui-tests.js" type="text/javascript"></script>
 
     <title>Knockout JS Validation Tests</title>
     <style type="text/css">
@@ -81,12 +83,12 @@
         <em class="customMessage" data-bind='validationMessage: field'></em>
     </script>
     <fieldset>
-        <legend>User: <span data-bind='text: errors().length'></span> errors</legend>
-        <label>First name: <input data-bind='value: firstName'/></label>
-        <label>Last name: <input data-bind='value: lastName'/></label>    
+        <legend>User: <span id="errorCount" data-bind='text: errors().length'></span> errors</legend>
+        <label>First name: <input id="firstNameTxt" data-bind='value: firstName'/></label>
+        <label>Last name: <input id="lastNameTxt" data-bind='value: lastName'/></label>    
         <div data-bind='validationOptions: { messageTemplate: "customMessageTemplate" }'>
-            <label>Email: <input data-bind='value: emailAddress' required pattern="@"/></label>
-            <label>Location: <input data-bind='value: location'/></label>
+            <label>Email: <input id="emailAddressTxt" data-bind='value: emailAddress' required pattern="@"/></label>
+            <label>Location: <input id="locationTxt" data-bind='value: location'/></label>
             <label>Age: <input id="testAgeInput" data-bind='value: age' required/></label>
         </div>
         <label>
