tweaks to get recent pull request working w/ unit tests

--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -42,7 +42,7 @@
         };
 
         var mustEqual = function (val, other) {
-            return val == other();
+            return val == other;
         };
 
         var viewModel = {
