customErrorClass red test

--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -16,7 +16,8 @@
     <style type="text/css">
         label { display: block; }
         .validationMessage { color: Red; }
-        .customMessage { color: Orange; }        
+        .customMessage { color: Orange; }
+        .customErrorClass { color: blue; }
     </style>
 </head>
 <body>
