--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="Qunit/qunit.css" rel="stylesheet" type="text/css" />
-    <script src="Qunit/qunit.js" type="text/javascript"></script>
+    <link href="Qunit/qunit-1.12.0.css" rel="stylesheet" type="text/css" />
+    <script src="Qunit/qunit-1.12.0.js" type="text/javascript"></script>
     <!--We only include jQuery for testing purposes (testing UI changes)-->
-    <script src="Qunit/jquery-1.7.1.js" type="text/javascript"></script>
+    <script src="Qunit/jquery-2.0.3.js" type="text/javascript"></script>
     <script src="../Lib/knockout-latest.debug.js" type="text/javascript"></script>
     <script src="../Src/knockout.validation.js" type="text/javascript"></script>
 
