Split source into multiple files for better maintenance

--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -6,7 +6,7 @@
     <!--We only include jQuery for testing purposes (testing UI changes)-->
     <script src="Qunit/jquery-2.0.3.js" type="text/javascript"></script>
     <script src="../Lib/knockout-latest.debug.js" type="text/javascript"></script>
-    <script src="../Src/knockout.validation.js" type="text/javascript"></script>
+    <script src="../Dist/knockout.validation.js" type="text/javascript"></script>
 
     <!--test Scripts here-->
     <script src="validation-tests.js" type="text/javascript"></script>
