Use production version of knockout-2.3.0 for testing to show errors calling private (not exported) functions

--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -5,7 +5,7 @@
     <script src="Qunit/qunit-1.12.0.js" type="text/javascript"></script>
     <!--We only include jQuery for testing purposes (testing UI changes)-->
     <script src="Qunit/jquery-2.0.3.js" type="text/javascript"></script>
-    <script src="../Lib/knockout-latest.debug.js" type="text/javascript"></script>
+    <script src="../Lib/knockout-2.3.0.js" type="text/javascript"></script>
     <script src="../Dist/knockout.validation.js" type="text/javascript"></script>
 
     <!--test Scripts here-->
