Split tests out into multiple files (fixes #375)

--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -11,6 +11,9 @@
     <!--test Scripts here-->
     <script src="validation-tests.js" type="text/javascript"></script>
     <script src="validation-ui-tests.js" type="text/javascript"></script>
+	<script src="utils-tests.js" type="text/javascript"></script>
+	<script src="api-tests.js" type="text/javascript"></script>
+	<script src="rules-tests.js" type="text/javascript"></script>
 
     <title>Knockout JS Validation Tests</title>
     <style type="text/css">
