--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="Qunit/qunit-1.12.0.css" rel="stylesheet" type="text/css" />
-    <script src="Qunit/qunit-1.12.0.js" type="text/javascript"></script>
+    <link href="Qunit/qunit-1.16.0.css" rel="stylesheet" type="text/css" />
+    <script src="Qunit/qunit-1.16.0.js" type="text/javascript"></script>
     <!--We only include jQuery for testing purposes (testing UI changes)-->
-    <script src="Qunit/jquery-2.0.3.js" type="text/javascript"></script>
-    <script src="../Lib/knockout-3.0.0.js" type="text/javascript"></script>
+    <script src="Qunit/jquery-2.1.1.js" type="text/javascript"></script>
+    <script src="../Lib/knockout-3.2.0.js" type="text/javascript"></script>
     <script src="../Dist/knockout.validation.js" type="text/javascript"></script>
 
     <!--test Scripts here-->
@@ -19,18 +19,20 @@
     <style type="text/css">
         label { display: block; }
         .validationMessage { color: Red; }
-        .customMessage { color: Orange; }        
+        .customMessage { color: Orange; }
     </style>
 </head>
 <body>
-    <h1 id="qunit-header">Knockout JS Validation Tests</h1>
-    <h2 id="qunit-banner"></h2>
-    <div id="qunit-testrunner-toolbar"></div>
-    <h2 id="qunit-userAgent"></h2>
-    <ol id="qunit-tests"></ol>
-    <div id="qunit-fixture">test markup, will be hidden</div>
+    <div id="qunit">
+        <h1 id="qunit-header">Knockout JS Validation Tests</h1>
+        <h2 id="qunit-banner"></h2>
+        <div id="qunit-testrunner-toolbar"></div>
+        <h2 id="qunit-userAgent"></h2>
+        <ol id="qunit-tests"></ol>
+        <div id="qunit-fixture">test markup, will be hidden</div>
+    </div>
     <div id="testContainer">
-    
+
     </div>
     <div id="workbench">
         <script type="text/javascript">
@@ -71,13 +73,13 @@
             viewModel.confirmPassword = ko.observable().extend({
 				required: true,
                 validation: { validator: mustEqual, message: 'Passwords do not match.', params: viewModel.password }
-            }),
+            });
 
             viewModel.errors = ko.validation.group(viewModel);
 
             viewModel.requireLocation = function () {
                 viewModel.location.extend({ required: { message: 'location is required' } });
-            };        
+            };
         </script>
         <script id="customMessageTemplate" type="text/html">
             <em class="customMessage" data-bind='validationMessage: field'></em>
@@ -85,14 +87,14 @@
         <fieldset>
             <legend>User: <span id="errorCount" data-bind='text: errors().length'></span> errors</legend>
             <label>First name: <input id="firstNameTxt" data-bind='value: firstName'/></label>
-            <label>Last name: <input id="lastNameTxt" data-bind='value: lastName'/></label>    
+            <label>Last name: <input id="lastNameTxt" data-bind='value: lastName'/></label>
             <div data-bind='validationOptions: { messageTemplate: "customMessageTemplate" }'>
                 <label>Email: <input id="emailAddressTxt" data-bind='value: emailAddress' required pattern="@"/></label>
                 <label>Location: <input id="locationTxt" data-bind='value: location'/></label>
                 <label>Age: <input id="testAgeInput" data-bind='value: age' required/></label>
             </div>
             <label>
-                Subscriptions: 
+                Subscriptions:
                 <select data-bind='value: subscription, options: subscriptionOptions, optionsCaption: "Choose one..."'></select>
             </label>
             <label>Password: <input data-bind='value: password' type="password"/></label>
@@ -104,18 +106,15 @@
         <br />
         <button type="button" data-bind='click: requireLocation'>Make 'Location' required</button>
         <script type="text/javascript">
-            $(function () {                
+            $(function() {
                 ko.applyBindings(viewModel, $('#workbench')[0]);
-
 
                 module("Workbench Tests");
 
-                test("Reports Correct Amount of Starting Errors", function(){
-
+                test("Reports Correct Amount of Starting Errors", function() {
                     var cnt = $('#errorCount').text();
-
                     strictEqual(cnt, "5", "Init was not called, and the correct number of errors was evaluated");
-                })
+                });
             });
         </script>
     </div>
