--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<!DOCTYPE html>
+<html>
 <head>
     <link href="Qunit/qunit-1.16.0.css" rel="stylesheet" type="text/css" />
     <script src="Qunit/qunit-1.16.0.js" type="text/javascript"></script>
@@ -9,6 +9,7 @@
     <script src="../Dist/knockout.validation.js" type="text/javascript"></script>
 
     <!--test Scripts here-->
+    <script src="asserts.js" type="text/javascript"></script>
     <script src="validation-tests.js" type="text/javascript"></script>
     <script src="validation-ui-tests.js" type="text/javascript"></script>
 	<script src="utils-tests.js" type="text/javascript"></script>
@@ -36,8 +37,6 @@
     </div>
     <div id="workbench">
         <script type="text/javascript">
-            ko.validation.rules.pattern.message = 'Invalid.';
-
             var captcha = function (val) {
                 return val == 11;
             };
@@ -48,7 +47,7 @@
 
             var viewModel = {
                 firstName: ko.observable().extend({ minLength: 2, maxLength: 10 }),
-                lastName: ko.observable().extend({ required: { message: 'lastname is required' } }),
+                lastName: ko.observable().extend({ required: { message: 'lastName is required' } }),
                 emailAddress: ko.observable().extend({  // custom message
                     required: { message: 'Please supply your email address.' }
                 }),
@@ -109,11 +108,11 @@
             $(function() {
                 ko.applyBindings(viewModel, $('#workbench')[0]);
 
-                module("Workbench Tests");
+                QUnit.module('Workbench Tests');
 
-                test("Reports Correct Amount of Starting Errors", function() {
+                QUnit.test('Reports Correct Amount of Starting Errors', function(assert) {
                     var cnt = $('#errorCount').text();
-                    strictEqual(cnt, "5", "Init was not called, and the correct number of errors was evaluated");
+                    assert.strictEqual(cnt, '5', 'Init was not called, and the correct number of errors was evaluated');
                 });
             });
         </script>
