--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -24,17 +24,8 @@
 	</style>
 </head>
 <body>
-	<div id="qunit">
-		<h1 id="qunit-header">Knockout JS Validation Tests</h1>
-		<h2 id="qunit-banner"></h2>
-		<div id="qunit-testrunner-toolbar"></div>
-		<h2 id="qunit-userAgent"></h2>
-		<ol id="qunit-tests"></ol>
-		<div id="qunit-fixture">test markup, will be hidden</div>
-	</div>
-	<div id="testContainer">
-
-	</div>
+	<div id="qunit"></div>
+	<div id="testContainer"></div>
 	<div id="workbench">
 		<script type="text/javascript">
 			var captcha = function (val) {
