--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -6,7 +6,7 @@
 	<!--We only include jQuery for testing purposes (testing UI changes)-->
 	<script src="Qunit/jquery-2.1.1.js" type="text/javascript"></script>
 	<script src="../Lib/knockout-3.2.0.js" type="text/javascript"></script>
-	<script src="../Dist/knockout.validation.js" type="text/javascript"></script>
+	<script src="../Dist/knockout.validation-2.0.0-pre-4.js" type="text/javascript"></script>
 
 	<!--test Scripts here-->
 	<script src="asserts.js" type="text/javascript"></script>
