--- a/Tests/test-runner.htm
+++ b/Tests/test-runner.htm
@@ -7,6 +7,7 @@
 	<script src="Qunit/jquery-2.1.1.js" type="text/javascript"></script>
 	<script src="../Lib/knockout-3.2.0.js" type="text/javascript"></script>
 	<script src="../Dist/knockout.validation.js" type="text/javascript"></script>
+	<script src="../Localization/ro-RO.js" type="text/javascript"></script>
 
 	<!--test Scripts here-->
 	<script src="asserts.js" type="text/javascript"></script>
@@ -15,6 +16,7 @@
 	<script src="utils-tests.js" type="text/javascript"></script>
 	<script src="api-tests.js" type="text/javascript"></script>
 	<script src="rules-tests.js" type="text/javascript"></script>
+	<script src="locale-tests.js" type="text/javascript"></script>
 
 	<title>Knockout JS Validation Tests</title>
 	<style type="text/css">
