--- a/test/test-runner.htm
+++ b/test/test-runner.htm
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<link href="Qunit/qunit-1.16.0.css" rel="stylesheet" type="text/css" />
-	<script src="Qunit/qunit-1.16.0.js" type="text/javascript"></script>
+	<link href="lib/qunit-1.17.0.css" rel="stylesheet" type="text/css" />
+	<script src="lib/qunit-1.17.0.js" type="text/javascript"></script>
 	<!--We only include jQuery for testing purposes (testing UI changes)-->
-	<script src="Qunit/jquery-2.1.1.js" type="text/javascript"></script>
-	<script src="../Lib/knockout-3.2.0.js" type="text/javascript"></script>
-	<script src="../Dist/knockout.validation.js" type="text/javascript"></script>
-	<script src="../Localization/ro-RO.js" type="text/javascript"></script>
+	<script src="lib/jquery-2.1.3.js" type="text/javascript"></script>
+	<script src="lib/knockout-3.2.0.js" type="text/javascript"></script>
+	<script src="../dist/knockout.validation.js" type="text/javascript"></script>
+	<script src="../localization/ro-RO.js" type="text/javascript"></script>
 
 	<!--test Scripts here-->
 	<script src="asserts.js" type="text/javascript"></script>
