--- a/test/test-runner.htm
+++ b/test/test-runner.htm
@@ -37,6 +37,7 @@
 	<script src="../localization/tr-TR.js" type="text/javascript"></script>
 	<script src="../localization/zh-CN.js" type="text/javascript"></script>
 	<script src="../localization/zh-TW.js" type="text/javascript"></script>
+	<script src="../localization/ar-JO.js" type="text/javascript"></script>
 
 	<!--test Scripts here-->
 	<script src="asserts.js" type="text/javascript"></script>
