--- a/test/test-runner.htm
+++ b/test/test-runner.htm
@@ -6,38 +6,7 @@
 	<!--We only include jQuery for testing purposes (testing UI changes)-->
 	<script src="lib/jquery-2.1.3.js" type="text/javascript"></script>
 	<script src="lib/knockout-3.3.0.js" type="text/javascript"></script>
-	<script src="../dist/knockout.validation.js" type="text/javascript"></script>
-
-    <script src="../localization/ar-JO.js" type="text/javascript"></script>
-	<script src="../localization/bg-BG.js" type="text/javascript"></script>
-	<script src="../localization/ca-ES.js" type="text/javascript"></script>
-	<script src="../localization/cs-CZ.js" type="text/javascript"></script>
-	<script src="../localization/da-DK.js" type="text/javascript"></script>
-	<script src="../localization/de-DE.js" type="text/javascript"></script>
-	<script src="../localization/el-GR.js" type="text/javascript"></script>
-	<script src="../localization/en-US.js" type="text/javascript"></script>
-	<script src="../localization/es-ES.js" type="text/javascript"></script>
-	<script src="../localization/fa-IR.js" type="text/javascript"></script>
-	<script src="../localization/fr-FR.js" type="text/javascript"></script>
-	<script src="../localization/he-IL.js" type="text/javascript"></script>
-	<script src="../localization/hr-HR.js" type="text/javascript"></script>
-	<script src="../localization/hu-HU.js" type="text/javascript"></script>
-	<script src="../localization/it-IT.js" type="text/javascript"></script>
-	<script src="../localization/ja-JP.js" type="text/javascript"></script>
-	<script src="../localization/ko-KR.js" type="text/javascript"></script>
-	<script src="../localization/lv-LV.js" type="text/javascript"></script>
-	<script src="../localization/nb-NO.js" type="text/javascript"></script>
-	<script src="../localization/nl-BE.js" type="text/javascript"></script>
-	<script src="../localization/nl-NL.js" type="text/javascript"></script>
-	<script src="../localization/pl-PL.js" type="text/javascript"></script>
-	<script src="../localization/pt-BR.js" type="text/javascript"></script>
-	<script src="../localization/pt-PT.js" type="text/javascript"></script>
-	<script src="../localization/ro-RO.js" type="text/javascript"></script>
-	<script src="../localization/ru-RU.js" type="text/javascript"></script>
-	<script src="../localization/sv-SE.js" type="text/javascript"></script>
-	<script src="../localization/tr-TR.js" type="text/javascript"></script>
-	<script src="../localization/zh-CN.js" type="text/javascript"></script>
-	<script src="../localization/zh-TW.js" type="text/javascript"></script>
+	<script src="../dist/knockout.validation-with-locales.js" type="text/javascript"></script>
 
 	<!--test Scripts here-->
 	<script src="asserts.js" type="text/javascript"></script>
