Added missing Slovak localization file load to test runner.

--- a/test/test-runner.htm
+++ b/test/test-runner.htm
@@ -34,6 +34,7 @@
 	<script src="../localization/pt-PT.js" type="text/javascript"></script>
 	<script src="../localization/ro-RO.js" type="text/javascript"></script>
 	<script src="../localization/ru-RU.js" type="text/javascript"></script>
+	<script src="../localization/sk-SK.js" type="text/javascript"></script>
 	<script src="../localization/sv-SE.js" type="text/javascript"></script>
 	<script src="../localization/tr-TR.js" type="text/javascript"></script>
 	<script src="../localization/zh-CN.js" type="text/javascript"></script>
