add tests for ukrainian localization

--- a/test/test-runner.htm
+++ b/test/test-runner.htm
@@ -36,6 +36,7 @@
 	<script src="../localization/ru-RU.js" type="text/javascript"></script>
 	<script src="../localization/sv-SE.js" type="text/javascript"></script>
 	<script src="../localization/tr-TR.js" type="text/javascript"></script>
+	<script src="../localization/uk-UA.js" type="text/javascript"></script>
 	<script src="../localization/zh-CN.js" type="text/javascript"></script>
 	<script src="../localization/zh-TW.js" type="text/javascript"></script>
 
