--- a/test/test-runner-2.3.0.html
+++ b/test/test-runner-2.3.0.html
@@ -2,51 +2,52 @@
 <html>
 <head>
 	<link href="lib/qunit-2.9.2.css" rel="stylesheet" type="text/css" />
-	<script src="lib/qunit-2.9.2.js" type="text/javascript"></script>
+	<script src="lib/qunit-2.9.2.js"></script>
 	<!--We only include jQuery for testing purposes (testing UI changes)-->
-	<script src="lib/jquery-2.1.3.js" type="text/javascript"></script>
-	<script src="lib/knockout-2.3.0.js" type="text/javascript"></script>
-	<script src="../dist/knockout.validation.js" type="text/javascript"></script>
+	<script src="lib/jquery-2.1.3.js"></script>
+	<script src="lib/knockout-2.3.0.js"></script>
+	<script src="../dist/knockout.validation.js"></script>
 
-    <script src="../localization/ar-JO.js" type="text/javascript"></script>
-	<script src="../localization/bg-BG.js" type="text/javascript"></script>
-	<script src="../localization/ca-ES.js" type="text/javascript"></script>
-	<script src="../localization/cs-CZ.js" type="text/javascript"></script>
-	<script src="../localization/da-DK.js" type="text/javascript"></script>
-	<script src="../localization/de-DE.js" type="text/javascript"></script>
-	<script src="../localization/el-GR.js" type="text/javascript"></script>
-	<script src="../localization/en-US.js" type="text/javascript"></script>
-	<script src="../localization/es-ES.js" type="text/javascript"></script>
-	<script src="../localization/fa-IR.js" type="text/javascript"></script>
-	<script src="../localization/fr-FR.js" type="text/javascript"></script>
-	<script src="../localization/he-IL.js" type="text/javascript"></script>
-	<script src="../localization/hr-HR.js" type="text/javascript"></script>
-	<script src="../localization/hu-HU.js" type="text/javascript"></script>
-	<script src="../localization/it-IT.js" type="text/javascript"></script>
-	<script src="../localization/ja-JP.js" type="text/javascript"></script>
-	<script src="../localization/ko-KR.js" type="text/javascript"></script>
-	<script src="../localization/lv-LV.js" type="text/javascript"></script>
-	<script src="../localization/nb-NO.js" type="text/javascript"></script>
-	<script src="../localization/nl-BE.js" type="text/javascript"></script>
-	<script src="../localization/nl-NL.js" type="text/javascript"></script>
-	<script src="../localization/pl-PL.js" type="text/javascript"></script>
-	<script src="../localization/pt-BR.js" type="text/javascript"></script>
-	<script src="../localization/pt-PT.js" type="text/javascript"></script>
-	<script src="../localization/ro-RO.js" type="text/javascript"></script>
-	<script src="../localization/ru-RU.js" type="text/javascript"></script>
-	<script src="../localization/sv-SE.js" type="text/javascript"></script>
-	<script src="../localization/tr-TR.js" type="text/javascript"></script>
-	<script src="../localization/zh-CN.js" type="text/javascript"></script>
-	<script src="../localization/zh-TW.js" type="text/javascript"></script>
+    <script src="../localization/ar-JO.js"></script>
+	<script src="../localization/bg-BG.js"></script>
+	<script src="../localization/ca-ES.js"></script>
+	<script src="../localization/cs-CZ.js"></script>
+	<script src="../localization/da-DK.js"></script>
+	<script src="../localization/de-DE.js"></script>
+	<script src="../localization/el-GR.js"></script>
+	<script src="../localization/en-US.js"></script>
+	<script src="../localization/es-ES.js"></script>
+	<script src="../localization/fa-IR.js"></script>
+	<script src="../localization/fr-FR.js"></script>
+	<script src="../localization/he-IL.js"></script>
+	<script src="../localization/hr-HR.js"></script>
+	<script src="../localization/hu-HU.js"></script>
+	<script src="../localization/it-IT.js"></script>
+	<script src="../localization/ja-JP.js"></script>
+	<script src="../localization/ko-KR.js"></script>
+	<script src="../localization/lv-LV.js"></script>
+	<script src="../localization/nb-NO.js"></script>
+	<script src="../localization/nl-BE.js"></script>
+	<script src="../localization/nl-NL.js"></script>
+	<script src="../localization/pl-PL.js"></script>
+	<script src="../localization/pt-BR.js"></script>
+	<script src="../localization/pt-PT.js"></script>
+	<script src="../localization/ro-RO.js"></script>
+	<script src="../localization/ru-RU.js"></script>
+	<script src="../localization/sk-SK.js"></script>
+	<script src="../localization/sv-SE.js"></script>
+	<script src="../localization/tr-TR.js"></script>
+	<script src="../localization/zh-CN.js"></script>
+	<script src="../localization/zh-TW.js"></script>
 
 	<!--test Scripts here-->
-	<script src="asserts.js" type="text/javascript"></script>
-	<script src="validation-tests.js" type="text/javascript"></script>
-	<script src="validation-ui-tests.js" type="text/javascript"></script>
-	<script src="utils-tests.js" type="text/javascript"></script>
-	<script src="api-tests.js" type="text/javascript"></script>
-	<script src="rules-tests.js" type="text/javascript"></script>
-	<script src="locale-tests.js" type="text/javascript"></script>
+	<script src="asserts.js"></script>
+	<script src="validation-tests.js"></script>
+	<script src="validation-ui-tests.js"></script>
+	<script src="utils-tests.js"></script>
+	<script src="api-tests.js"></script>
+	<script src="rules-tests.js"></script>
+	<script src="locale-tests.js"></script>
 
 	<title>Knockout JS Validation Tests (KnockoutJS v2.3.0)</title>
 	<style type="text/css">
@@ -59,7 +60,7 @@
 	<div id="qunit"></div>
 	<div id="testContainer"></div>
 	<div id="workbench">
-		<script type="text/javascript">
+		<script>
 			var captcha = function (val) {
 				return val == 11;
 			};
@@ -127,7 +128,7 @@
 		<br />
 		<br />
 		<button type="button" data-bind='click: requireLocation'>Make 'Location' required</button>
-		<script type="text/javascript">
+		<script>
 			$(function() {
 				ko.applyBindings(viewModel, $('#workbench')[0]);
 
