--- a/test/test-runner-3.5.0.html
+++ b/test/test-runner-3.5.0.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link href="lib/qunit-2.9.2.css" rel="stylesheet" type="text/css" />
-	<script src="lib/qunit-2.9.2.js" type="text/javascript"></script>
+	<script src="lib/qunit-2.9.2.js"></script>
 	<!--We only include jQuery for testing purposes (testing UI changes)-->
 	<script src="lib/jquery-2.1.3.js"></script>
 	<script src="lib/knockout-3.5.0.js"></script>
@@ -34,6 +34,7 @@
 	<script src="../localization/pt-PT.js"></script>
 	<script src="../localization/ro-RO.js"></script>
 	<script src="../localization/ru-RU.js"></script>
+	<script src="../localization/sk-SK.js"></script>
 	<script src="../localization/sv-SE.js"></script>
 	<script src="../localization/tr-TR.js"></script>
 	<script src="../localization/zh-CN.js"></script>
