--- a/test/test-runner-3.4.2.html
+++ b/test/test-runner-3.4.2.html
@@ -8,7 +8,7 @@
 	<script src="lib/knockout-3.4.2.js"></script>
 	<script src="../dist/knockout.validation.js"></script>
 
-    <script src="../localization/ar-JO.js"></script>
+	<script src="../localization/ar-JO.js"></script>
 	<script src="../localization/bg-BG.js"></script>
 	<script src="../localization/ca-ES.js"></script>
 	<script src="../localization/cs-CZ.js"></script>
@@ -18,6 +18,7 @@
 	<script src="../localization/en-US.js"></script>
 	<script src="../localization/es-ES.js"></script>
 	<script src="../localization/fa-IR.js"></script>
+	<script src="../localization/fi-FI.js"></script>
 	<script src="../localization/fr-FR.js"></script>
 	<script src="../localization/he-IL.js"></script>
 	<script src="../localization/hr-HR.js"></script>
