--- a/test/test-runner-3.5.0.html
+++ b/test/test-runner-3.5.0.html
@@ -37,6 +37,7 @@
 	<script src="../localization/sk-SK.js"></script>
 	<script src="../localization/sv-SE.js"></script>
 	<script src="../localization/tr-TR.js"></script>
+	<script src="../localization/uk-UA.js"></script>
 	<script src="../localization/zh-CN.js"></script>
 	<script src="../localization/zh-TW.js"></script>
 
