--- a/test/test-runner-3.5.0.html
+++ b/test/test-runner-3.5.0.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<link href="lib/qunit-1.17.1.css" rel="stylesheet" type="text/css" />
-	<script src="lib/qunit-1.17.1.js"></script>
+	<link href="lib/qunit-2.9.2.css" rel="stylesheet" type="text/css" />
+	<script src="lib/qunit-2.9.2.js" type="text/javascript"></script>
 	<!--We only include jQuery for testing purposes (testing UI changes)-->
 	<script src="lib/jquery-2.1.3.js"></script>
 	<script src="lib/knockout-3.5.0.js"></script>
